# kpi-database-project

./: .gitignore  README.md  create.sql  makefile  populate.sql  pyproject.toml  query.sql  requirements-dev.txt  requirements.txt
output/: hits.html  parents.html  releases.html
python/: charts.py  db.py  main.py  mypy.ini
sql/: create.sql  populate.sql  query.sql  view.sql
sql/config/: create_user.sql  grant.sql
