[tool.poetry]
name = "kpi-database-project"
version = "0.1.0"
description = ""
authors = ["juliancoffee <lightdarkdaughter@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
cx_Oracle = "^7.3.0"

[tool.poetry.dev-dependencies]
pylint = "^2.5.2"
mypy = "^0.770"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
