[tool.poetry]
name = "kpi-database-project"
version = "0.1.0"
description = ""
authors = ["juliancoffee <lightdarkdaughter@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
cx_Oracle = "^7.3.0"
plotly = "^4.7.1"
pandas = "^1.0.3"

[tool.poetry.dev-dependencies]
pylint = "^2.5.2"
mypy = "^0.770"
flake8 = "^3.7.9"
jedi = "^0.17.0"
ipython = "^7.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
